k8s-deployment/backend/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  namespace: backend-dev
spec:
  selector:
    app: api-gateway-service
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: backend-dev
spec:
  selector:
    app: auth-service
  ports:
    - port: 50051
      targetPort: 50051
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: backend-dev
spec:
  selector:
    app: task-service
  ports:
    - port: 50052
      targetPort: 50052
  type: ClusterIP
  

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: backend-dev
spec:
  selector:
    app: user-service
  ports:
    - port: 50053
      targetPort: 50053
  type: ClusterIP
